Fix card text overflow

--- a/src/features/Play/Card/styles.module.css
+++ b/src/features/Play/Card/styles.module.css
@@ -4,13 +4,9 @@
   text-align: center;
   vertical-align: middle;
   padding: 0.3em;
-  border-radius: 0px 0px 25px 25px;
-}
-
-@media only screen and (max-height: 400px) {
-  .cardContainer {
-    max-height: 80%;
-  }
+  border-radius: 25px 25px 25px 25px;
+  cursor: pointer;
+  position: relative;
 }
 
 .cardImage {
